monticore-generator/src/test/resources/cocos/invalid/A4057/A4057c.mc4
package cocos.invalid.A4057;

grammar A4057c {

  symbol A = "Hello" name:B;
  
  B = "B";
}